---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E305 [*] Expected 2 blank lines after class or function definition, found (1)
   --> E30.py:798:1
    |
798 | fn()
    | ^^
    |
help: Add missing blank line(s)
795 |     # comment
796 |
797 |     # another comment
798 +
799 | fn()
800 | # end
801 |

E305 [*] Expected 2 blank lines after class or function definition, found (1)
   --> E30.py:809:1
    |
809 | a = 1
    | ^
    |
help: Add missing blank line(s)
806 |     # comment
807 |
808 |     # another comment
809 +
810 | a = 1
811 | # end
812 |

E305 [*] Expected 2 blank lines after class or function definition, found (1)
   --> E30.py:821:1
    |
821 | try:
    | ^^^
    |
help: Add missing blank line(s)
818 |
819 |     # another comment
820 |
821 +
822 | try:
823 |     fn()
824 | except Exception:

E305 [*] Expected 2 blank lines after class or function definition, found (1)
   --> E30.py:833:1
    |
833 | if a():
    | ^^
    |
help: Add missing blank line(s)
829 | def a():
830 |     print()
831 |
832 +
833 | # Two spaces before comments, too.
834 | if a():
835 |     a()

E305 [*] Expected 2 blank lines after class or function definition, found (1)
   --> E30.py:846:1
    |
846 | if __name__ == '__main__':
    | ^^
    |
help: Add missing blank line(s)
843 | def main():
844 |     blah, blah
845 |
846 +
847 | if __name__ == '__main__':
848 |     main()
849 | # end

E305 [*] Expected 2 blank lines after class or function definition, found (1)
   --> E30.py:973:1
    |
973 | BANANA = 100
    | ^^^^^^
    |
help: Add missing blank line(s)
969 | class A:
970 |     pass
971 |
972 +
973 | # ====== Cool constants ========
974 | BANANA = 100
975 | APPLE = 200
